# linal

./: .gitignore  CMakeLists.txt
include/linal/: dim.hpp  export.hpp  matrix.hpp  my_type_traits.hpp  point.hpp  utils.hpp
src/: dim.cpp  matrix.cpp  my_type_traits.hpp  point.cpp  utils.cpp
